--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  mirrorfly_uikit_plugin: ^3.0.0+1
+  mirrorfly_uikit_plugin: 
+    git:
+      url: https://github.com/MirrorFly/MirrorFly-Flutter-UIKIT.git
+      ref: feature/flutter_latest_migration
   
   
 dev_dependencies:
